// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label Component should render a Label with corner hint 1`] = `
<div
  data-testid="label-component-test"
  tw="flex justify-between"
>
  <label
    text="Label"
    tw="block text-sm font-medium text-gray-800 dark:text-gray-300"
  >
    Label
  </label>
  <span
    tw="text-sm text-gray-600 dark:text-gray-300"
  >
    Optional
  </span>
</div>
`;

exports[`Label Component should render a Label with no corner hint 1`] = `
<div
  data-testid="label-component-test"
  tw="flex justify-between"
>
  <label
    text="Label"
    tw="block text-sm font-medium text-gray-800 dark:text-gray-300"
  >
    Label
  </label>
</div>
`;
